<resources>
    <string name="app_name">Mock</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Log Out</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_my_location">My Location</string>
    <string name="title_my_friends">My Friends</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_register">Register</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_register">Register</string>
    <string name="label_full_name">Full name</string>
    <string name="label_username">Username</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="error_label_empty_field">This field is required</string>
    <string name="error_label_username_exists">Username already exists</string>
    <string name="error_label_invalid_email">Invalid email address</string>
    <string name="error_password">Password should be at least 6 characters</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_signin">Invalid email or password!</string>
    <string name="error_reg">Failed to register user! Please try again!</string>
    <string name="msg_reg_success">Registered successfully!</string>
    <string name="title_search">Search user</string>
    <string name="error_invalid_username">Username must be alphabetic</string>
    <string name="upload_photo">Upload a profile picture</string>
    <string name="button_choose">Choose</string>
    <string name="error_invalid_path">Invalid file path</string>
    <string name="title_settings">Settings</string>
    <string name="change_password">label_change_pass</string>
    <string name="label_change_pass">Change password</string>
    <string name="button_add_as_friend">+ Add as friend</string>
    <string name="button_send_a_message">Send message</string>
    <string name="menu_track_on_map">Track on map</string>
    <string name="menu_unfriend">Unfriend</string>
    <string name="menu_send_message">Send message</string>
    <string name="menu_add_as_friend">Add as friend</string>
    <string name="menu_cancel_request">Cancel request</string>
    <string name="menu_confirm_friend">Confirm friend</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_decline">Decline</string>
    <string name="label_no_new_notifications">No new notifications.</string>
    <string name="label_no_friend">You have not added any friend yet</string>
    <string name="hint_write_a_message">Write a message...</string>
    <string name="label_no_conversation">No conversation to show</string>
    <string name="label_notification_mode">Notification mode</string>
    <string name="label_uploading_image">Uploading image</string>
    <string name="label_vibration">Vibration</string>
</resources>
